--- a/Phase-2-project/src/components/HeroSection.css
+++ b/Phase-2-project/src/components/HeroSection.css
@@ -8,7 +8,7 @@ video {
   }
   
   .hero-container {
-    /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
+     background: url('/WavyHauzTrts_pics/90s theme.jpeg') center center/cover no-repeat; 
     height: 100vh;
     width: 100%;
     display: flex;
