--- a/Phase-2-project/src/Style/App.css
+++ b/Phase-2-project/src/Style/App.css
@@ -4,7 +4,7 @@
     padding: 0;
     font-family: 'PT Sans', sans-serif;
   }
-  .home,
+  .Home,
   .About,
   .products,
 
@@ -15,8 +15,8 @@
     justify-content: center;
     font-size: 3rem;
   }
-  .home {
-    background-image: url('/WavyHauzTrts_pics/90s theme.jpeg');
+  .Home {
+    background-image: url('/src/WavyHauzTrts_pics/90s theme.jpeg');
       background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -25,7 +25,7 @@
   }
 
   .About {
-  background-image: url('/WavyHauzTrts_pics/90s theme.jpeg');
+  background-image: url('/src/WavyHauzTrts_pics/90s theme.jpeg');
     background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -33,14 +33,14 @@
   font-size: 100px;
 }
 
-.products {background-image: url('/images/img-1.jpg');
+.products {background-image: url('/src/WavyHauzTrts_pics/Logo1__1.jpg');
     background-position: center;
     background-size: fill;
     background-repeat: no-repeat;
     color: #fff;
     font-size: 100px;
   }
-  .sign-up {background-image: url('/images/img-8.jpg');
+  .sign-up {background-image: url('/src/WavyHauzTrts_pics/Logo1__1.jpg');
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
