--- a/Phase-2-project/src/Style/HeroSection.css
+++ b/Phase-2-project/src/Style/HeroSection.css
@@ -1,5 +1,5 @@
   .hero-container {
-     background: url('/WavyHauzTrts_pics/90s theme.jpeg') center center/cover no-repeat; 
+     background: url('/src/WavyHauzTrts_pics/90s theme.jpeg') center center/cover no-repeat; 
     height: 100vh;
     width: 100%;
     display: flex;
